# dumb-file-drop

./: .gitignore  MANIFEST.in  README.md  dumb_file_drop.py  pyproject.toml  requirements.txt  setup.py
dumb_file_drop/: __main__.py
dumb_file_drop/templates/: index.html
templates/: index.html
